--- a/src/components/Statistics/statistics.module.css
+++ b/src/components/Statistics/statistics.module.css
@@ -11,3 +11,10 @@
   padding-left: 0;
   margin: 0px;
 }
+.item {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 40px;
+  padding: 4px;
+}
